# chemmisol-cpp

./: CMakeLists.txt  README.md
analysis/: experiment.py
cmake/: ChemmisolConfig.cmake
docs/: _2home_2pbreugno_2Development_2c_09_09_2workspace_2newton-chemical_2include_2chemical_8h-example.html  annotated.html  arithmetics_8h_source.html  basic_chemical_system_2main_8cpp-example.html  chemical_8h_source.html  chemmisol_8h.html  chemmisol_8h__incl.map  chemmisol_8h__incl.md5  chemmisol_8h_source.html  classchemmisol_1_1AqueousComponent-members.html  classchemmisol_1_1AqueousComponent.html  classchemmisol_1_1AqueousComponent__coll__graph.map  classchemmisol_1_1AqueousComponent__inherit__graph.md5  classchemmisol_1_1AqueousSpecies-members.html  classchemmisol_1_1AqueousSpecies.html  classchemmisol_1_1AqueousSpecies__coll__graph.map  classchemmisol_1_1AqueousSpecies__coll__graph.md5  classchemmisol_1_1ChemicalComponent-members.html  classchemmisol_1_1ChemicalComponent.html  classchemmisol_1_1ChemicalComponent__inherit__graph.map  classchemmisol_1_1ChemicalComponent__inherit__graph.md5  classchemmisol_1_1ChemicalSpecies-members.html  classchemmisol_1_1ChemicalSpecies.html  classchemmisol_1_1ChemicalSpecies__inherit__graph.map  classchemmisol_1_1ChemicalSpecies__inherit__graph.md5  classchemmisol_1_1ChemicalSystem-members.html  classchemmisol_1_1ChemicalSystem.html  classchemmisol_1_1Component-members.html  classchemmisol_1_1Component.html  classchemmisol_1_1Component__inherit__graph.map  classchemmisol_1_1Component__inherit__graph.md5  classchemmisol_1_1EmptyReagents-members.html  classchemmisol_1_1EmptyReagents.html  classchemmisol_1_1EmptyReagents__coll__graph.map  classchemmisol_1_1EmptyReagents__coll__graph.md5  classchemmisol_1_1EmptyReagents__inherit__graph.map  classchemmisol_1_1EmptyReagents__inherit__graph.md5  classchemmisol_1_1Experiment-members.html  classchemmisol_1_1Experiment.html  classchemmisol_1_1FixedAqueousComponent-members.html  (+312 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  (+32 more)
easylogging++/: CMakeLists.txt.in
examples/: CMakeLists.txt
examples/basic_chemical_system/: CMakeLists.txt  main.cpp
examples/dynamic_equilibrium/: CMakeLists.txt  main.cpp
include/: chemical.h  chemmisol.h  experiment.h  gauss.h  linear.h  newton.h  units.h
include/chemmisol/: chemical.h  experiment.h  gauss.h  linear.h  logging.h  newton.h  regula_falsi.h  units.h
include/chemmisol/chemical/: experiment.h  reaction.h  solver.h  species.h  system.h
include/chemmisol/math/: arithmetics.h  gauss.h  homotopy.h  linear.h  newton.h  regula_falsi.h  solver.h
src/: chemical.cpp  convert.cpp  experiment.cpp  gauss.cpp  main.cpp  newton.cpp  units.cpp
src/chemmisol/: chemical.cpp  experiment.cpp  gauss.cpp  logging.cpp  newton.cpp  units.cpp
src/chemmisol/chemical/: experiment.cpp  reaction.cpp  solver.cpp  species.cpp  system.cpp
src/chemmisol/math/: gauss.cpp
tests/: CMakeLists.txt  chemical.cpp  experiment.cpp  gauss.cpp  linear.cpp  newton.cpp  units.cpp
tests/chemmisol/: chemical.cpp  experiment.cpp  gauss.cpp  linear.cpp  newton.cpp  regula_falsi.cpp
tests/chemmisol/chemical/: experiment.cpp  reaction.cpp  system.cpp
tests/chemmisol/math/: gauss.cpp  linear.cpp  regula_falsi.cpp
tests/chemmisol/tests/chemical/system/: agcl_test.cpp  basic.cpp  basic.h  nacl_test.cpp  po4_test.cpp  soh_test.cpp  utils.cpp  utils.h
tests/chemmisol/tests/math/: arithmetics.cpp  gauss.cpp  homotopy.cpp  linear.cpp  newton.cpp  regula_falsi.cpp
tests/googletest/: CMakeLists.txt  main.cpp
